--- a/components/modules/Card.module.css
+++ b/components/modules/Card.module.css
@@ -30,7 +30,15 @@
     font-size: 1rem;
 }
 
+.details div {
+    display: flex;
+    align-items: center;
+}
+
 .price {
+    background-color: #f7f7f7;
+    border-radius: 5px;
+    padding: 2px;
     display: flex;
     justify-content: left !important;
     align-items: center;
