--- a/components/layout/Layout.module.css
+++ b/components/layout/Layout.module.css
@@ -39,11 +39,13 @@
 @media (max-width: 900px) {
     .header {
         padding: 50px;
+        
     }
 }
 
 @media (max-width: 600px) {
     .header {
         padding: 10px;
+        margin-top: 20px;
     }
 }
