--- a/components/modules/Card.module.css
+++ b/components/modules/Card.module.css
@@ -10,9 +10,27 @@
     position: relative;
 }
 
+.imgContainer {
+    position: relative;
+}
+
 .container img {
     width: 100%;
+    height: 100%;
     border-radius: 5px;
+    /* position: ab; */
+    margin-top: 0;
+}
+
+.badge {
+    background-color: #ed4133;
+    color: white;
+    padding: 4px;
+    border-radius: 5px;
+    border: 3px solid white;
+    position: absolute;
+    top: 8px;
+    left: 8px;
 }
 
 .details {
@@ -59,13 +77,3 @@
     color: #ed4133;
 }
 
-.badge {
-    background-color: #ed4133;
-    color: white;
-    padding: 4px;
-    border-radius: 5px;
-    border: 3px solid white;
-    position: absolute;
-    top: 15px;
-    left: 15px;
-}
