--- a/components/modules/Guide.module.css
+++ b/components/modules/Guide.module.css
@@ -1,19 +1,45 @@
 .container {
-    display: flex;
-    justify-content: space-between;
+    display: grid;
+    grid-template-columns: repeat(3, 1fr);
+    gap: 20px;
+    text-align: center;
     margin-bottom: 100px;
 }
 
 .container a {
     box-shadow: rgba(92, 245, 115, 0.123) 0px 4px 16px,
         rgba(17, 17, 26, 0.05) 0px 8px 32px;
-    padding: 15px 50px;
+    padding: 30px 50px;
     border-radius: 10px;
     cursor: pointer;
+    font-size: 1.1rem;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    transition: all 0.2s;
+}
+
+.container a:hover {
+    background-color: #fcfcfc;
+    box-shadow: rgba(92, 245, 115, 0.323) 0px 4px 16px,
+        rgba(17, 17, 26, 0.05) 0px 8px 32px;
+}
+
+.container a img {
+    width: 20px;
+    margin: 6px;
+    
 }
 
 @media (max-width: 900px) {
     .container a {
-        padding: 10px 20px;
+        padding: 30px 40px;
+    }
+    
+}
+
+@media (max-width:600px) {
+    .container  {
+        grid-template-columns: 1fr;
     }
 }
