--- a/components/layout/Layout.module.css
+++ b/components/layout/Layout.module.css
@@ -14,7 +14,7 @@
 }
 
 .right a {
-    margin-left: 15px;
+    margin-left: 10px;
     color: dimgrey;
     font-weight: 500;
 }
@@ -47,5 +47,14 @@
     .header {
         padding: 10px;
         margin-top: 20px;
+    }
+}
+
+@media (max-width:330px) {
+    .header .left a {
+         font-size: 1.1rem;
+    }
+    .header .right a {
+        font-size: 0.8rem;
     }
 }
