--- a/components/layout/Layout.module.css
+++ b/components/layout/Layout.module.css
@@ -14,7 +14,7 @@
 }
 
 .right a {
-    margin-left: 10px;
+    margin-left: 18px;
     color: dimgrey;
     font-weight: 500;
 }
@@ -25,6 +25,7 @@
     color: #fff;
     padding: 10px 0;
     margin-top: 30px;
+    border-radius: 4px;
 }
 
 .footer a {
