--- a/components/modules/Card.module.css
+++ b/components/modules/Card.module.css
@@ -2,8 +2,11 @@
     display: flex;
     flex-direction: column;
     width: 270px;
-    box-shadow: rgba(92, 245, 115, 0.123) 0px 4px 16px,
-        rgba(17, 17, 26, 0.05) 0px 8px 32px;
+    box-shadow:
+        0 4px 12px rgba(83, 198, 11, 0.2),
+        /* soft green glow */
+        0 2px 4px rgba(0, 0, 0, 0.05);
+    /* subtle natural shadow */
     margin-bottom: 40px;
     padding: 10px;
     border-radius: 10px;
@@ -76,4 +79,3 @@
 .discount {
     color: #ed4133;
 }
-
