--- a/components/templates/CategoriesPage.module.css
+++ b/components/templates/CategoriesPage.module.css
@@ -1,7 +1,7 @@
 .container {
     max-width: 900px;
     margin: auto;
-    margin-top: 100px;
+    margin-top: 80px;
 }
 
 .container h2 {
@@ -36,17 +36,17 @@
 .cards {
     display: flex;
     flex-wrap: wrap;
-    justify-content: space-between;
+    justify-content: space-around;
     margin-top: 80px;
 }
 
 .cards>div {
-    width: 80%;
+    width: 40%;
 }
 
 .cards img {
     margin: auto;
-    margin-top: 40px;
+    /* margin-top: 40px; */
 }
 
 
@@ -58,6 +58,13 @@
 
     .cards {
         justify-content: space-around;
+    }
+}
+
+
+@media (max-width:720px) {
+    .cards>div {
+        width: 60%;
     }
 }
 
@@ -75,10 +82,16 @@
         width: 100%;
         margin: 0 0 20px;
     }
+
+
 }
 
 @media (max-width:500px) {
-    .cards img {
+    /* .cards img {
         width: 200px;
+    } */
+
+    .cards>div {
+        width: 80%;
     }
 }
