category page image size fixed

--- a/components/templates/CategoriesPage.module.css
+++ b/components/templates/CategoriesPage.module.css
@@ -87,9 +87,9 @@
 }
 
 @media (max-width:500px) {
-    /* .cards img {
+    .cards img {
         width: 200px;
-    } */
+    }
 
     .cards>div {
         width: 80%;
